# llm-inference-blueprint

./: .gitignore  CLAUDE.md  Cargo.toml  GPU-SUPPORT.md  PLAN.md  README.md  RFP-GPU-SUPPORT.md  blueprint.json  docker-compose.yml  vllm_inference.long-type-10859816308026645600.txt
.foreman/audits/: 2026-03-19-human-audit.json  2026-03-19-post-cycle3.json
.foreman/memory/environment/: home-drew-code-vllm-inference-blueprint.json
.foreman/memory/profile/: engineering-foreman.json
.foreman/memory/strategy/: engineering.json
.foreman/memory/worker/: claude.json  codex.json
.foreman/one-shot/: iteration-1.json  iteration-2.json  iteration-3.json  iteration-4.json
.foreman/runs/engineering-vllm-inference-blueprint/: final-summary.json  request.json  task-envelope.json  trace.json
.foreman/runs/engineering-vllm-inference-blueprint/rounds/1/: context.json  decision.json  plan.json  repair.json  trace.json  track-results.json  validation.json
.foreman/runs/engineering-vllm-inference-blueprint/rounds/2/: context.json  decision.json  plan.json  repair.json  trace.json  track-results.json  validation.json
.foreman/runs/engineering-vllm-inference-blueprint/rounds/3/: context.json  decision.json  plan.json  repair.json  trace.json  track-results.json  validation.json
.foreman/runs/engineering-vllm-inference-blueprint/rounds/4/: context.json  plan.json  repair.json  trace.json  track-results.json  validation.json
.foreman/runs/engineering-vllm-inference-blueprint/rounds/5/: context.json  decision.json  plan.json  repair.json  trace.json  track-results.json  validation.json
.foreman/traces/2e9ffce5-d5f8-4821-b74b-34cf02e3fc47/: trace.json
.foreman/traces/307bb4a1-6456-46eb-9c2a-b37349ee5646/: trace.json
.foreman/traces/32cfdcb5-88c3-45dc-a3f3-8a5918471e78/: trace.json
.foreman/traces/4126e301-acfa-4d5d-aee2-ad1ac95784bc/: trace.json
.foreman/traces/5ee1123c-a7c9-485f-878b-ea3583074b22/: trace.json
.foreman/traces/8c16cb16-a990-494e-bebf-b4b5158a3e2b/: trace.json
.github/workflows/: ci.yml  release.yml
config/: pricing.toml
contracts/: foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: IRLNSettlement.sol  InferenceBSM.sol  RLNSettlement.sol
contracts/test/: BillingE2E.t.sol  InferenceBSM.t.sol  RLNBillingE2E.t.sol
deploy/: config.example.json  definition.json  register-blueprint.sh
operator/: Cargo.toml  Dockerfile  build.rs
operator/src/: billing.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  qos.rs  server.rs  vllm.rs
operator/tests/: harness_e2e.rs  lifecycle.rs  local_e2e.rs  server_tests.rs
scripts/: README.md  deploy-local.sh  sign-spend-auth.mjs  test-e2e.sh  test-full-protocol.sh
sdk/: package.json
sdk/src/: index.ts  types.ts
