[workspace]
members = ["operator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tangle-network/vllm-inference-blueprint"

[workspace.dependencies]
# Use path dep for local dev; switch to version for publishing
blueprint-sdk = { path = "/home/drew/code/blueprint/crates/sdk", features = ["std", "tangle", "macros"] }
# blueprint-sdk = { version = "0.1.0-alpha.22", features = ["std", "tangle", "macros"] }
alloy = { version = "1", features = ["full", "signer-local", "provider-http"] }
alloy-sol-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
