[package]
name = "vllm-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vllm_inference"
path = "src/lib.rs"

[[bin]]
name = "vllm-operator"
path = "src/main.rs"

[dependencies]
blueprint-sdk = { workspace = true }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }

# Web framework (for OpenAI-compatible HTTP server)
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace", "timeout"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Metrics
prometheus = { workspace = true }

# Streaming
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Misc
bytes = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
blueprint-sdk = { path = "/home/drew/code/blueprint/crates/sdk", features = ["testing", "tangle"] }
blueprint-anvil-testing-utils = { path = "/home/drew/code/blueprint/crates/testing-utils/anvil" }
wiremock = "0.6"
alloy-primitives = "1"
alloy-sol-types = "1"
